@@ -6,4 +6,4 @@ usr/share/gnome-settings-daemon
 usr/share/GConf
 usr/share/glib-2.0
 usr/share/polkit-1
-[linux-any] usr/lib/udev/rules.d/ lib/udev
+[linux-any] lib/udev
